--- a/HeliumInsighter/HeliumInsighter.csproj
+++ b/HeliumInsighter/HeliumInsighter.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.9.1" />
       <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="Polly" Version="7.2.3" />
