--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,7 @@ on:
     inputs:
       release:
         required: true
-        default: false
+        default: "false"
       majorVersion:
         required: true
         default: "0"
@@ -34,7 +34,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal
       
   publish:
-    if: (github.ref == 'refs/heads/main' && github.event.inputs.release == true)
+    if: (github.ref == 'refs/heads/main' && github.event.inputs.release == 'true')
     runs-on: macos-latest
     env:
       releaseVersion: ${{ github.event.inputs.majorVersion }}.${{ github.event.inputs.minorVersion }}.${{ github.run_number }}
