--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -70,5 +70,5 @@ jobs:
           files: |
             HeliumCat/bin/Release/net6.0/osx-x64/publish/HeliumCat
             HeliumCat/bin/Release/net6.0/osx-arm64/publish/HeliumCat
-            HeliumCat/bin/Release/net6.0/win-x64/publish/HeliumCat
+            HeliumCat/bin/Release/net6.0/win-x64/publish/HeliumCat.exe
             HeliumCat/bin/Release/net6.0/linux-x64/publish/HeliumCat
