--- a/HeliumCat/HeliumCat.csproj
+++ b/HeliumCat/HeliumCat.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
       <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
+      <PackageReference Include="LiteDB" Version="5.0.12" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="Polly" Version="7.2.3" />
     </ItemGroup>
