--- a/HeliumCat/HeliumCat.csproj
+++ b/HeliumCat/HeliumCat.csproj
@@ -1,18 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
+        <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CommandLineParser" Version="2.9.1" />
-      <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
-      <PackageReference Include="LiteDB" Version="5.0.12" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-      <PackageReference Include="Polly" Version="7.2.3" />
+        <PackageReference Include="CommandLineParser" Version="2.9.1" />
+        <PackageReference Include="HeliumApi.SDK" Version="1.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
 </Project>
